<resources>
    <string name="app_name">Pocket Translator</string>


    <string name="please_enter_word">Please enter a word</string>
    <string name="translating">Translating…</string>
    <string name="failed_translating">Translation failed</string>
    <string name="nothing_to_pronounce">Nothing to pronounce</string>
    <string name="nothing_to_speak">Nothing to speak</string>
    <string name="details_not_found">Details not found</string>

    <string name="translate">Translate</string>
    <string name="enter_english_text">Enter English text</string>
    <string name="translate_to">Translate To</string>
    <string name="translated_text_">Translation appears here</string>
    <string name="developer_details_title">Developer Details</string>
    <string name="dev_details">Name:\t\tSaruj Kanti Das\nRole:\t\tAndroid Developer\nEmail:\t\tsarujdas31@gmail.com</string>
    <string name="project_description">This app is designed to translate English words into native Indian languages such as
        Hindi, Tamil, Telugu, Kannada, Bengali, Marathi, Gujarati, and Urdu.\n\nIn addition to translation, the app helps
        users understand words better by providing detailed meanings, usage examples, and pronunciation support.\n\nThe goal of
        this app is to make learning and understanding languages easier for students, professionals, and anyone who wants to explore
        Indian languages in a simple and intuitive way.</string>
</resources>